<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_create_order_mesage"
        android:id="@+id/txt_message"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_message"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_left_header_sliding">

    <Button
        style="@style/CusButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_Cancel"
        android:background="@drawable/btn_ripple_yellow_grey_corner"/>

    <Button
        style="@style/CusButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Accept"
        android:id="@+id/btn_Accept"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginLeft="@dimen/padding"
        android:background="@drawable/btn_ripple_yellow_grey_corner" />
</LinearLayout>
</RelativeLayout>
