<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/confirm_ui_padding_h">


    <TextView
        style="@style/CusTextViewContentTheme"
        android:layout_margin="@dimen/padding"
        android:textColor="@color/color_transparent_back"
        android:text="@string/nav_Edit_Profile_content_Notification"
        android:id="@+id/txt_Edit_Profile_Notification"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_Edit_Profile_Notification"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_left_header_sliding">

        <Button
            android:id="@+id/btn_Edit_Profile_Cancel"
            style="@style/CusButtonTheme"
            android:layout_below="@+id/etxt_input"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:background="@drawable/btn_ripple_grey_yellow"/>
        <TextView
            android:id="@+id/line1"
            android:layout_width="@dimen/confirm_ui_padding_h"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_input"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/confirm_ui_padding_h"
            android:background="@android:color/transparent" />
        <Button
            android:id="@+id/btn_Edit_Profile_Accept"
            style="@style/CusButtonTheme"
            android:layout_below="@+id/etxt_input"
            android:layout_toRightOf="@+id/line1"
            android:text="@string/btn_Accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:background="@drawable/btn_ripple_grey_yellow"/>
    </LinearLayout>



</RelativeLayout>
