<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar_confirm" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_splash"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/confirm_ui_padding_h"
            android:paddingLeft="@dimen/confirm_ui_padding_w"
            android:paddingRight="@dimen/confirm_ui_padding_w"
            android:padding="@dimen/confirm_ui_padding_w">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/confirm_ui_button_option"
                    android:padding="@dimen/confirm_ui_padding_w"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_app" />

                <TextView
                    android:id="@+id/tv_description_app"
                    style="@style/CusTextViewContentTheme"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/img_avatar"
                    android:layout_marginTop="@dimen/confirm_ui_padding_w"
                    android:gravity="center"
                    android:text="@string/confirm_signin_welcome"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/lout_container_button_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_description_app"
                    android:layout_marginTop="@dimen/confirm_ui_padding_h"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/edt_phone_num"
                        style="@style/CusEditTextTheme"
                        android:layout_marginTop="@dimen/confirm_ui_padding_h"
                        android:gravity="center"
                        android:hint="@string/confirm_info_profile_phone_num"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingLeft="@dimen/confirm_ui_padding_w"
                        android:textSize="@dimen/size_text_app_title" />

                    <EditText
                        android:id="@+id/edt_new_password"
                        style="@style/CusEditTextTheme"
                        android:layout_marginTop="@dimen/confirm_ui_padding_w"
                        android:gravity="center"
                        android:hint="@string/title_forgot_new_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/confirm_ui_padding_w"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/edt_re_new_password"
                        style="@style/CusEditTextTheme"
                        android:layout_marginTop="@dimen/confirm_ui_padding_w"
                        android:gravity="center"
                        android:hint="@string/title_forgot_new_re_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/confirm_ui_padding_w"
                        android:visibility="gone" />


                    <Button
                        android:id="@+id/btn_submit"
                        style="@style/CusButtonTheme"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/confirm_ui_padding_h"
                        android:background="@drawable/ripple_selector_yellow"
                        android:text="@string/btn_send_confirm"
                        android:textAllCaps="true" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>
</LinearLayout>